--- a/src/app/pages/produit/produit.component.html
+++ b/src/app/pages/produit/produit.component.html
@@ -1,1 +1,186 @@
-<p>produit works!</p>
+<body>
+
+
+  <br><br>
+  <h1 class="Poisson">Poisson</h1>
+  <table class="tab1">
+    <tr id="header">
+      <th></th>
+      <th>Nom</th>
+      <th>Prix produit</th>
+      <th>Prix en promotion</th>
+      <th>Pourcentage de promotion</th>
+      <th>Quantité en stock</th>
+      <th> Nombre d'articles vendus</th>
+      <th>Commentaires</th>
+
+
+    </tr>
+    <tr *ngFor="let p of listproducts">
+      <th *ngIf="p.category == 0">
+        <input class="input1" type="text" id="qte" name="qte" list="qte-list" (change)="refreshListStock(p.tigID,p.quantity_stock,p.name)" placeholder="Quantity..." #qte>
+        <button class="button4" type="button" (click)="incrementQteStock(p.tigID,p.quantity_stock)">
+          Achat
+        </button>
+        <button class="button5" type="button" (click)="decrementQteStock(p.tigID,p.quantity_stock)">
+          Vente
+        </button>
+        <br>
+        <input class="input1" type="text" id="pourcentage" name="pourcentage" list="pourcentage-list" placeholder="Pourcentage..." #pourcentage>
+        <button class="button6" type="button" (click)="changePercent(p.tigID,p.quantity_stock)">Pourcent</button>
+
+      </th>
+      <th *ngIf="p.category == 0">
+        {{p.name}}
+      </th>
+      <th *ngIf="p.category == 0">
+        {{p.price}} €
+      </th>
+      <th *ngIf="p.category == 0">
+        {{p.discount_price}} €
+      </th>
+      <th *ngIf="p.category == 0">
+        {{p.discount_percent}} %
+      </th>
+      <th *ngIf="p.category == 0">
+        {{p.quantity}}
+      </th>
+      <th *ngIf="p.category == 0">
+        {{p.sales_number}}
+      </th>
+      <th *ngIf="p.category == 0">
+        {{p.comments}}
+      </th>
+
+    </tr>
+  </table>
+
+
+  <br><br>
+  <h1 class="Fruitdemer">Fruit de mer</h1>
+  <table class="tab2">
+    <tr id="header">
+      <th></th>
+      <th>Nom</th>
+      <th>Prix produit</th>
+      <th>Prix en promotion</th>
+      <th>Pourcentage de promotion</th>
+      <th>Quantité en stock</th>
+      <th> Nombre d'articles vendus</th>
+      <th>Commentaires</th>
+
+
+    </tr>
+    <tr *ngFor="let p of listproducts">
+      <th *ngIf="p.category == 1">
+        <input class="input1" type="text" id="qte" name="qte" list="qte-list" (change)="refreshListStock(p.tigID,p.quantity_stock,p.name)" placeholder="Quantity..." #qte>
+        <button class="button4" type="button" (click)="incrementQteStock(p.tigID,p.quantity_stock)">
+          Achat
+        </button>
+        <button class="button5" type="button" (click)="decrementQteStock(p.tigID,p.quantity_stock)">
+          Vente
+        </button>
+        <br>
+        <input class="input1" type="text" id="pourcentage" name="pourcentage" list="pourcentage-list" placeholder="Pourcentage..." #pourcentage>
+        <button class="button6" type="button" (click)="changePercent(p.tigID,p.quantity_stock)">Pourcent</button>
+      </th>
+      <th *ngIf="p.category == 1">
+        {{p.name}}
+      </th>
+      <th *ngIf="p.category == 1">
+        {{p.price}} €
+      </th>
+      <th *ngIf="p.category == 1">
+        {{p.discount_price}} €
+      </th>
+      <th *ngIf="p.category == 1">
+        {{p.discount_percent}} %
+      </th>
+      <th *ngIf="p.category == 1">
+        {{p.quantity}}
+      </th>
+      <th *ngIf="p.category == 1">
+        {{p.sales_number}}
+      </th>
+      <th *ngIf="p.category == 1">
+        {{p.comments}}
+      </th>
+
+    </tr>
+  </table>
+
+  <br><br>
+
+
+
+
+  <br><br>
+  <br><br>
+
+
+
+
+  <br><br>
+  <h1 class="Crustacer">Crustacé</h1>
+  <table class="tab3">
+    <tr id="header">
+      <th></th>
+      <th>Nom</th>
+      <th>Prix produit</th>
+      <th>Prix en promotion</th>
+      <th>Pourcentage de promotion</th>
+      <th>Quantité en stock</th>
+      <th> Nombre d'articles vendus</th>
+      <th>Commentaires</th>
+
+
+    </tr>
+    <tr *ngFor="let p of listproducts">
+      <th *ngIf="p.category == 2">
+        <input class="input1" type="text" id="qte" name="qte" list="qte-list" (change)="refreshListStock(p.tigID,p.quantity_stock,p.name)" placeholder="Quantity..." #qte>
+        <button class="button4" type="button" (click)="incrementQteStock(p.tigID,p.quantity_stock)">
+          Achat
+        </button>
+        <button class="button5" type="button" (click)="decrementQteStock(p.tigID,p.quantity_stock)">
+          Vente
+        </button><br>
+        <input class="input1" type="text" id="pourcentage" name="pourcentage" list="pourcentage-list" placeholder="Pourcentage..." #pourcentage>
+        <button class="button6" type="button" (click)="changePercent(p.tigID,p.quantity_stock)">Pourcent</button>
+      </th>
+      <th *ngIf="p.category == 2">
+        {{p.name}}
+      </th>
+      <th *ngIf="p.category == 2">
+        {{p.price}} €
+      </th>
+      <th *ngIf="p.category == 2">
+        {{p.discount_price}} €
+      </th>
+      <th *ngIf="p.category == 2">
+        {{p.discount_percent}} %
+      </th>
+      <th *ngIf="p.category == 2">
+        {{p.quantity}}
+      </th>
+      <th *ngIf="p.category == 2">
+        {{p.sales_number}}
+      </th>
+      <th *ngIf="p.category == 2">
+        {{p.comments}}
+      </th>
+
+    </tr>
+  </table>
+
+  <br><br>
+
+
+  <br><br>
+
+  <h1 class="barre"></h1>
+  <button class="button1" type="button" (click)="postListStock()">Ajouter Stock Articles</button>
+  <button class="button2" type="button" (click)="deleteListStock()">Retirer Stock Articles</button>
+  <button class="button3" type="button" (click)="postListPercent()">Ajouter Pourcentage Articles</button>
+
+
+</body>
