--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -1,12 +1,11 @@
 
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
     <ul id="header" class="nav navbar-nav">
       <li class="nav-item"><a routerLink="/home">Accueil</a></li>
       <li class="nav-item"><a routerLink="/detailsproduit">Détails produit</a></li>
-      <li class="nav-item"><a routerLink="/produit">Tableaux produits</a></li>
-      <li class="nav-item"><a routerLink="/donnees-a-historique">Données à historique</a></li>
+      <li class="nav-item"><a routerLink="/tableaux-produits">Tableaux produits</a></li>
+      <li class="nav-item"><a routerLink="/donneesHistorique">Données à historique</a></li>
     </ul>
   </div>
 </nav>
