--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -1,9 +1,3 @@
-<ul>
-  <li><a mat-button routerLink='/home'>Home</a></li>
-  <li><a mat-button routerLink='/detailsproduit'>Détails Produit</a></li>
-  <li>tableaux produits</li>
-  <li>données à historique</li>
-</ul>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
   <div class="container">
@@ -11,7 +5,7 @@
       <li class="nav-item"><a routerLink="/home">Accueil</a></li>
       <li class="nav-item"><a routerLink="/detailsproduit">Détails produit</a></li>
       <li class="nav-item"><a routerLink="/tableaux-produits">Tableaux produits</a></li>
-      <li class="nav-item"><a routerLink="/donnees-a-historique">Données à historique</a></li>
+      <li class="nav-item"><a routerLink="/donneesHistorique">Données à historique</a></li>
     </ul>
   </div>
 </nav>
