--- a/src/app/features/header/header.component.css
+++ b/src/app/features/header/header.component.css
@@ -1,18 +1,29 @@
 
 .container {
   display: flex;
-  justify-content: center;
-  background-color: #09ebeb;
+  justify-content: flex-start;
+  background-color: white;
+  box-shadow: 0px 0px 10px;
   list-style: none;
 }
 
 ul#header li {
   display: inline;
   text-align: center;
-  padding: 3px;
+  text-decoration: none;
+  padding-right: 2rem;
   margin: 0;
   width: 19%;
   text-transform: uppercase;
   font-family: sans-serif;
 }
 
+.nav-item a {
+  text-decoration: none;
+  color: black;
+  transition: all 200ms ease-in;
+}
+
+.nav-item a:hover {
+  color: rgb(78, 181, 207);
+}
